added responsive UI

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Portfolio of Nithin Sri Raghavendra Rao Machineni, a Computer Science student with a focus on AI and ML.">
+    <meta name="keywords" content="Nithin Sri Raghavendra Rao Machineni, Computer Science, AI, Machine Learning, Portfolio">
     <title>Nithin Sri Raghavendra Rao Machineni - Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -14,61 +16,58 @@
             <p>Passionate about leveraging artificial intelligence and machine learning to tackle real-world problems. Seeking opportunities to contribute to innovative projects and further develop my skills in a collaborative environment.</p>
         </header>
 
-        <section class="profile">
-            <div class="profile-picture">
-                <img src="profile-pic.jpg" alt="Profile Picture">
-            </div>
-            <div class="profile-info">
-                <h2>About Me</h2>
-                <p>
-                    As a Bachelor of Technology (B.Tech) student in Computer Science with a focus on Artificial Intelligence (AI) and Machine Learning (ML), I am seeking an internship or entry-level position to gain practical experience and develop my technical expertise. My goal is to work in a collaborative environment where I can apply my knowledge of AI concepts, programming, and data analysis to solve real-world challenges.
-                </p>
-                <p><strong>Email:</strong> nithinraghavendramachineni@gmail.com</p>
-                <p><strong>Phone:</strong> +91 9441364442</p>
-                <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/nithin-raghavendra-machineni/" target="_blank">LinkedIn Profile</a></p>
-                <p><strong>GitHub:</strong> <a href="https://github.com/Nithinmachineni" target="_blank">GitHub Profile</a></p>
-                <p><strong>Address:</strong> Hyderabad, Telangana</p>
-            </div>
-        </section>
+        <main>
+            <section class="profile">
+                <div class="profile-picture">
+                    <img src="profile-pic.jpg" alt="Profile picture of Nithin Sri Raghavendra Rao Machineni">
+                </div>
+                <div class="profile-info">
+                    <h2>About Me</h2>
+                    <p>
+                        As a Bachelor of Technology (B.Tech) student in Computer Science with a focus on Artificial Intelligence (AI) and Machine Learning (ML), I am seeking an internship or entry-level position to gain practical experience and develop my technical expertise. My goal is to work in a collaborative environment where I can apply my knowledge of AI concepts, programming, and data analysis to solve real-world challenges.
+                    </p>
+                    <p><strong>Email:</strong> <a href="mailto:nithinraghavendramachineni@gmail.com">nithinraghavendramachineni@gmail.com</a></p>
+                    <p><strong>Phone:</strong> +91 9441364442</p>
+                    <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/nithin-raghavendra-machineni/" target="_blank" rel="noopener noreferrer">LinkedIn Profile</a></p>
+                    <p><strong>GitHub:</strong> <a href="https://github.com/Nithinmachineni" target="_blank" rel="noopener noreferrer">GitHub Profile</a></p>
+                    <p><strong>Address:</strong> Hyderabad, Telangana</p>
+                </div>
+            </section>
 
-        <section class="education">
-            <h2>Education</h2>
-            <p><strong>Degree:</strong> Bachelor of Technology (B.Tech) in Computer Science with a specialization in Artificial Intelligence (AI) and Machine Learning (ML)</p>
-            <p><strong>Institution:</strong> J.B. Institute of Engineering & Technology</p>
-            <p><strong>Expected Graduation:</strong> May 2027</p>
-        </section>
+            <section class="education">
+                <h2>Education</h2>
+                <p><strong>Degree:</strong> Bachelor of Technology (B.Tech) in Computer Science with a specialization in Artificial Intelligence (AI) and Machine Learning (ML)</p>
+                <p><strong>Institution:</strong> J.B. Institute of Engineering & Technology</p>
+                <p><strong>Expected Graduation:</strong> May 2027</p>
+            </section>
 
-        <section class="skills">
-            <h2>Skills</h2>
-            <ul>
-                <li>Programming Languages: Java, C</li>
-                <li>Web Technologies: HTML, CSS</li>
-            </ul>
-        </section>
+            <section class="skills">
+                <h2>Skills</h2>
+                <ul>
+                    <li>Programming Languages: Java, C</li>
+                    <li>Web Technologies: HTML, CSS</li>
+                </ul>
+            </section>
 
-        <section class="interests">
-            <h2>Hobbies & Interests</h2>
-            <ul>
-                <li>Cricket</li>
-                <li>Table Tennis</li>
-                <li>Exploring AI Tools</li>
-                <li>Surfing the Internet</li>
-            </ul>
-        </section>
+            <section class="interests">
+                <h2>Hobbies & Interests</h2>
+                <ul>
+                    <li>Cricket</li>
+                    <li>Table Tennis</li>
+                    <li>Exploring AI Tools</li>
+                    <li>Surfing the Internet</li>
+                </ul>
+            </section>
+        </main>
 
         <footer>
             <p>&copy; 2024 Nithin Sri Raghavendra Rao Machineni</p>
         </footer>
 
         <script type="module">
-            // Import the functions you need from the SDKs you need
             import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-app.js";
             import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-analytics.js";
-            // TODO: Add SDKs for Firebase products that you want to use
-            // https://firebase.google.com/docs/web/setup#available-libraries
-          
-            // Your web app's Firebase configuration
-            // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+
             const firebaseConfig = {
               apiKey: "AIzaSyC8uqZqdO1EUHiGizr0GwtpabUTKzbkddA",
               authDomain: "nithinmachineni-24cff.firebaseapp.com",
@@ -78,11 +77,10 @@
               appId: "1:919332179156:web:76b26ce80d12c12d143f41",
               measurementId: "G-4PETFCP501"
             };
-          
-            // Initialize Firebase
+
             const app = initializeApp(firebaseConfig);
             const analytics = getAnalytics(app);
-          </script>
+        </script>
     </div>
 </body>
 </html>
